--- a/Project.toml
+++ b/Project.toml
@@ -1,3 +1,4 @@
 [deps]
 GR = "28b8d3ca-fb5f-59d9-8090-bfdbd6d07a71"
+GeoParams = "e018b62d-d9de-4a26-8697-af89c310ae38"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
